--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     קופון, קופון לאייהרב ראשון לציון, קופון לאייהרב ראשל״צ, אייהרב ראשון לציון
     קופון, קוד קופון ראשון לציון, קופון Iherb, קופון ל Iherb, אייהרב נתניה,
     קופון לאייהרב נתניה, אייהרב תל אביב, הנחה לאייהרב תל אביב, קוד לאייהרב תל
-    אביב, Iherb,"" />
+    אביב, Iherb," />
     <link rel="stylesheet" href="style.css" />
     <script
       async
