--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     קופון, קוד קופון ראשון לציון, קופון Iherb, קופון ל Iherb, אייהרב נתניה,
     קופון לאייהרב נתניה, אייהרב תל אביב, הנחה לאייהרב תל אביב, קוד לאייהרב תל
     אביב, Iherb," />
+    <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="style.css" />
     <script
       async
